added comments in the code

--- a/Illumio_Assessment.ipynb
+++ b/Illumio_Assessment.ipynb
@@ -47,7 +47,8 @@
     "startTime = time.time()\n",
     "predefinedWords = {}\n",
     "\n",
-    "#reading the predefined words into a dictionary for easy access.\n",
+    "#reading the predefined words into a dictionary for easy access. \n",
+    "# For, a system holding predefined data in GB/TB, we can use a distrbuted cache to achieve this purpose.\n",
     "with open('predefined_words.txt','r') as file:\n",
     "    lines = file.readlines()\n",
     "    for line in lines:\n",
@@ -55,6 +56,8 @@
     "# print(len(predefinedWords))\n",
     "\n",
     "# reading the input Data and matching the words with the predefined ones in the dictionary\n",
+    "# Here, I am reading all lines at once since my system is capable of holding the data in memory. but, if we are gonna\n",
+    "# deal with much large data sets, its better to read and write data in batches. so, that each batch fits into the memory.\n",
     "matched_word_cnt = 0\n",
     "matched_words_str = ''\n",
     "with open('input.txt','r') as inputFile:\n",
